[workspace]
members = [
    "lecture-1/hello-world",
    "lecture-1/type-inf",
    "lecture-1/euler",
    "lecture-1/lcm",
    "lecture-1/collatz",
    "lecture-1/max-path",
    "lecture-2/simple-dt-1",
    "lecture-2/overflow",
    "lecture-2/overflow-allow",
    "lecture-2/array_vec",
    "lecture-2/udp",
    "lecture-2/assignment-2", 
    "lecture-3/p1-onwership", 
    "lecture-3/p2-references",
    "lecture-3/p3-move",  
    "lecture-3/p3-borrowing",
    "lecture-3/p4-mutability",
    "lecture-3/p5-growing-vec",  
    "lecture-3/p6-alias",
    "lecture-3/p7-slice", 
    "lecture-3/p8-slice",  
    "lecture-3/p9-slice", 
    "lecture-4_1-validity/p1-growing-vect",
    "lecture-4_1-validity/p2-modify-lender", 
    "lecture-4_1-validity/p3-unsafe-move", 
    "lecture-4_1-validity/refactor",
    "lecture-4_1-validity/p4-reborrow",
    "lecture-4_1-validity/p5-lifetimes", 
    "lecture-4_2-enum/assignment", 
    "lecture-4_2-enum/p1-ipaddress", 
    "lecture-4_2-enum/p2-option", 
    "lecture-4_2-enum/p3-error", 
    "lecture-5-generics-traits/p-struct-as-enum", 
    "lecture-5-generics-traits/p1-generics", 
    "lecture-5-generics-traits/p2-generics", 
    "lecture-5-generics-traits/p3-generics", 
    "lecture-5-generics-traits/p4-traits", 
    "lecture-5-generics-traits/p5-traits", 
    "lecture-5-generics-traits/p6-error", "lecture-5-generics-traits/p7-error", 
    "lecture-6-iterators/p1-iter", "lecture-6-iterators/p2-split", "lecture-6-iterators/p3-lazy", 
    "lecture-6-iterators/p4-fib", "lecture-6-iterators/p5-mycol", "lecture-6-iterators/p6-consuming-adapters",
]
